# unet-pet-segmentation

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.py  dataset.py  evaluate.py  model.py  pyproject.toml  pyrightconfig.json  requirements-export.txt  requirements.txt  train.py  u_net.py  unet-refactor.md
.github/workflows/: ci.yml
artifacts/metrics/baseline_fcn/: config(1).yaml  metrics(2).jsonl
artifacts/metrics/unet_256_aug/: config(1).yaml  metrics(2).jsonl
artifacts/metrics/unet_base/: config(2).yaml  metrics(3).jsonl
configs/: baseline_fcn.yaml  unet_256_aug.yaml  unet_base.yaml
scripts/: benchmark.py  evaluate.py  export_onnx.py  infer.py  plot_curves.py  train.py  visualize.py
src/unet_pet_seg/: __init__.py  baselines.py  checkpoint.py  config.py  config_validate.py  dataset.py  evaluate.py  inference.py  logger.py  losses.py  model.py  trainer.py  viz.py
src/unet_pet_seg/cli/: __init__.py  benchmark.py  evaluate.py  export_onnx.py  infer.py  train.py  visualize.py
src/unet_pet_seg/utils/: seeding.py
tests/: conftest.py  test_checkpoint.py  test_config_validate.py  test_dataset.py  test_model.py  test_training.py
