[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unet-pet-segmentation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "numpy",
    "pillow",
    "pyyaml",
    "tensorboard",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]
deploy = ["onnx>=1.16.0", "onnxruntime>=1.18.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/unet_pet_seg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
